--- a/.env
+++ b/.env
@@ -1,26 +1,26 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:5/v9/b1IWYBF+nismPcH0Vp3h3oNe2fUurRYiy/weLU=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://sima.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=sima_db
-DB_USERNAME=postgres
-DB_PASSWORD=password
-
-# DB_CONNECTION=mysql
+# DB_CONNECTION=pgsql
 # DB_HOST=127.0.0.1
-# DB_PORT=3306
+# DB_PORT=5432
 # DB_DATABASE=sima_db
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_USERNAME=postgres
+# DB_PASSWORD=password
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sima_db
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
